Creating Cadastro Form

--- a/src/react/src/index.css
+++ b/src/react/src/index.css
@@ -1,80 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 /*Color Pattern*/
 :root{
     --GrayishWhite: #f6f6f6;
     --Black: #202020;
     --Gray:  #514f4f;
     --SoftGray: #D9D9D9;
-    
-    }
-    * {
-        box-sizing: border-box;
-    }
-    
-    html, body, #root, #defaultLayout, #guestLayout {
-        min-height: 100vh;
-    }
-    
-    body {
-        font-family: 'Open Sans', sans-serif;
-        margin: 0;
-        padding: 0;
-        font-size: 14px;
-        color: var(--Black);
-        background-color: var(--GrayishWhite);
-    }
-    
-    /*Input Pattern*/
-    input {
-        outline: 0;
-        background: var(--SoftGray);
-        width: 100%;
-        border: 2px solid rgba(230, 230, 230, 0);
-        margin: 0 0 36px;
-        padding: 15px;
-        box-sizing: border-box;
-        font-size: 14px;
-        transition: all 0.3s;
-        border-radius: 10px;
-    }
-    
-    input:focus {
-        border-color: var(--Gray);
-    }
-    
-    /*btn Pattern*/
-    .btn{
-        font-family: "Roboto", sans-serif;
-        background: var(--Gray);
-        text-decoration: none;
-        padding: 15px;
-        color: var(--GrayishWhite);
-        font-size: 16px;
-        -webkit-transition: all 0.3 ease;
-        transition: all 0.3 ease;
-        cursor: pointer;
-        border-radius: 10px;
-    }
-    
-    .btn:hover,
-    .btn:active,
-    .btn:focus {
-        background: var(--Black);;
-        color: var(--GrayishWhite);
-        transition-duration: 1.5s;
-        transition-timing-function: ease;
-    }
-    
-    /*Titles*/
-    
-    /*Link in texts <a></a>*/
-    .message{
-        margin: 48px 0 0;
-        color: var(--Gray);
-        font-size: 16px;
-        text-align: center;
-    }
-    
-    /*Effects Pattern*/
-    .mainshadowdown{
-        box-shadow:  0 3px 8px 0 rgba(0,0,0,0.35);
-    }
+    --MediumGray: #7a7979;
+}
+
+/*effects*/
+.mainshadowdown{
+    box-shadow:  0 3px 8px 0 rgba(0,0,0,0.35);
+}
