--- a/src/react/src/index.css
+++ b/src/react/src/index.css
@@ -8,7 +8,12 @@
     --MediumGray: #7a7979;
 }
 
+body{
+    margin: 0;
+    background-color: var(--GrayishWhite);
+}
+
 /*effects*/
 .mainshadowdown{
-    box-shadow:  0 3px 8px 0 rgba(0,0,0,0.35);
+    box-shadow:  0 3px 5px 0 rgba(0,0,0,0.35);
 }
