--- a/src/react/src/Views/Login/Login.css
+++ b/src/react/src/Views/Login/Login.css
@@ -1,5 +1,3 @@
-
-
 .main{
     display: flex;
     justify-content: center;
@@ -19,10 +17,9 @@ form{
 
 }
 form .title{
-
     color: var(--Gray);
     font-size: 36px;
-    margin-bottom: 1rem;
+    margin: 10px 0 1rem;
 }
 form .message{
     color: var(--MediumGray);
@@ -70,4 +67,17 @@ form button:hover {
     color: var(--GrayishWhite);
     transition-duration: 1.5s;
     transition-timing-function: ease;
+}
+
+.message a{
+    text-decoration: none;
+    color: var(--GrayishWhite);
+}
+
+.message a:hover{
+    color: var(--Gray);
+}
+
+img{
+
 }
