--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -1,3 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+/*Color Pattern*/
+:root{
+    --GrayishWhite: #f6f6f6;
+    --Black: #202020;
+    --Gray:  #514f4f;
+    --SoftGray: #D9D9D9;
+    --MediumGray: #7a7979;
+}
+
+body{
+    margin: 0;
+    background-color: var(--GrayishWhite);
+}
+
 .main{
     display: flex;
     justify-content: center;
@@ -92,5 +107,5 @@ input[type="file"] {
 }
 
 .logo-img{
-    height: 75px;
+    height: 60px;
 }
