--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -7,7 +7,9 @@
     --SoftGray: #D9D9D9;
     --MediumGray: #7a7979;
 }
-
+.mainshadowdown{
+    box-shadow:  0 3px 5px 0 rgba(0,0,0,0.35);
+}
 body{
     margin: 0;
     background-color: var(--GrayishWhite);
@@ -19,6 +21,7 @@ body{
     align-items: center;
     height: 100vh;
     font-family: 'Open Sans', sans-serif;
+    overflow: visible;
 }
 
 form{
@@ -33,7 +36,7 @@ form{
 }
 form .title{
     color: var(--Gray);
-    font-size: 36px;
+    font-size: 20px;
     margin: 10px 0 1rem;
 }
 form .message{
