--- a/src/public/css/navbar.css
+++ b/src/public/css/navbar.css
@@ -29,9 +29,6 @@
 }
 
 .picture-wrapper .text{
-    display: flex;
-    align-items: center;
-    padding: 20px;
     color: var(--GrayishWhite);
 }
 
@@ -41,6 +38,22 @@
     font-weight: bold;
 }
 
-.picture-wrapper img{
-    height: 80px;
+.picture-wrapper a{
+    display: flex;
+    align-items: center;
+}
+
+.picture-wrapper{
+    display: flex;
+    align-items: center;
+    padding: 10px;
+}
+
+.search-icon{
+    height: 30px;
+    margin-right: 30px;
+}
+
+.profile-ima{
+    height: 70px;
 }
