--- a/src/public/css/perfil.css
+++ b/src/public/css/perfil.css
@@ -223,3 +223,9 @@ body{
     transition-duration: 1.5s;
     transition-timing-function: ease;
 }
+
+.disp-info-icon{
+    position: absolute;
+    right: 26px;
+    height: 20px;
+}
