--- a/src/public/css/perfil.css
+++ b/src/public/css/perfil.css
@@ -195,7 +195,7 @@ body{
 }
 .portBox{
     cursor: pointer;
-    border: solid 1px var(--Gray);
+
     background-color: transparent;
     margin-left: 25px;
     display: flex;
@@ -275,4 +275,8 @@ body{
     top: 200px;
     border-radius: 20px;
     text-align: justify;
+}
+
+.shadowbtn{
+    box-shadow:  0 0 5px 0 rgba(0,0,0,0.35);
 }
