refactor: view login

--- a/src/public/css/perfil.css
+++ b/src/public/css/perfil.css
@@ -16,7 +16,6 @@ body{
 }
 
 .sideBar {
-    position: absolute;
     top: 95px;
     left: 0;
     height: 100vh;
@@ -186,7 +185,6 @@ body{
 .portifolio{
     padding-top: 20px;
     margin-left: 25px;
-    position: absolute;
     left: 30vh;
     height: 100vh;
     width: 100%;
@@ -195,7 +193,6 @@ body{
 }
 .portBox{
     cursor: pointer;
-
     background-color: transparent;
     margin-left: 25px;
     display: flex;
@@ -203,7 +200,7 @@ body{
     height:50px;
     justify-content: center;
     margin-top: 10px;
-    border-radius: 100%;
+    border-radius: 250px;
 }
 .portBox:hover{
     background-color: var(--Black);
@@ -279,4 +276,8 @@ body{
 
 .shadowbtn{
     box-shadow:  0 0 5px 0 rgba(0,0,0,0.35);
+}
+
+.main-content{
+    display: flex;
 }
