--- a/src/public/css/perfil.css
+++ b/src/public/css/perfil.css
@@ -36,6 +36,7 @@ body{
     font-family: 'Open Sans', sans-serif;
 }
 .user .userInfo .name{
+
     font-size: 120%;
     font-weight: bold;
     color: var(--Black);
@@ -59,12 +60,15 @@ body{
     font-weight: bold;
     background-color: var(--MediumGray);
 }
+
 .userFollowers .count{
     padding-left: 1rem;
     color: var(--GrayishWhite);
+    margin-top: 5%;
 }
 .userFollowers .tag{
-    color: var(--SoftGray)
+    color: var(--SoftGray);
+    margin-top: 5%;
 }
 .contact{
     margin-top: 20px;
@@ -188,7 +192,6 @@ body{
     left: 30vh;
     height: 100vh;
     width: 100%;
-    display: flex;
 
 }
 .portBox{
