--- a/src/public/css/perfil.css
+++ b/src/public/css/perfil.css
@@ -177,13 +177,49 @@ body{
     text-decoration: none;
     color: var(--GrayishWhite);
     align-self: center;
+    background-color: var(--Gray);
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 50px;
+    justify-content: center;
+    margin-top: 10px;
+    border-radius: 10px;
+    min-width: 190px;
+    cursor: pointer;
 }
+
+.logout:hover{
+    text-decoration: none;
+    background: darkred;
+    color: var(--GrayishWhite);
+    transition-duration: 1.5s;
+    transition-timing-function: ease;
+}
+
 .edit{
     text-decoration: none;
     color: var(--GrayishWhite);
     align-self: center;
+    background-color: var(--Gray);
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 50px;
+    justify-content: center;
+    margin-top: 10px;
+    border-radius: 10px;
+    min-width: 190px;
+    cursor: pointer;
 }
 
+.edit:hover{
+    text-decoration: none;
+    background: var(--Black);
+    color: var(--GrayishWhite);
+    transition-duration: 1.5s;
+    transition-timing-function: ease;
+}
 
 
 .portifolio{
@@ -195,17 +231,22 @@ body{
 
 }
 .portBox{
+    text-decoration: none;
     cursor: pointer;
     background-color: transparent;
     margin-left: 25px;
     display: flex;
+    align-items: center;
     width: 50px;
     height:50px;
     justify-content: center;
     margin-top: 10px;
     border-radius: 250px;
+    color: var(--Black);
+    font-size: 20px;
 }
 .portBox:hover{
+    text-decoration: none;
     background-color: var(--Black);
     color: var(--GrayishWhite);
     transition-duration: 1s;
