--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -137,7 +137,9 @@ input[type="file"] {
     display: flex;
 }
 
-
+.checkbox-wrapper-55{
+    margin-left: 20px;
+}
 
 
 
@@ -312,9 +314,47 @@ input[type="file"] {
 #cover-preview-wrapper div{
     margin-top: 20px;
 }
+
+.img-preview-wrapper{
+    position: relative;
+    height: 100px;
+    width: 100px;
+}
+
 .img-preview{
     height:100px;
 }
 
+
+
+
+.file-icon-create-project{
+    height: 20px;
+}
+
+.custom-file-project-upload{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    outline: 0;
+    background: var(--SoftGray);
+    width: 100%;
+    margin: 0 0 1rem;
+    padding: 15px;
+    font-size: 14px;
+    border-radius: 10px;
+    border-color: transparent;
+    cursor: pointer;
+}
+
+#file-preview{
+    display: flex;
+    align-items: center;
+    margin-top: 12px;
+}
+
+#create-project-btn{
+    margin-top: 12px;
+}
 
 
