refactor: full project view

--- a/src/public/css/projectfullview.css
+++ b/src/public/css/projectfullview.css
@@ -75,6 +75,9 @@ body{
     font-size: 24px;
 }
 
+.descript a{
+    text-decoration: none;
+}
 .imagens{
     display: flex;
     align-items: center;
@@ -143,3 +146,7 @@ body{
     transition-duration: 1.5s;
     transition-timing-function: ease;
 }
+
+
+
+
