style: adicionar mais responsividade

--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -309,10 +309,12 @@ input[type="file"] {
 
 #images-preview-wrapper div{
     margin-top: 20px;
+    width: 100%;
 }
 
 #cover-preview-wrapper div{
     margin-top: 20px;
+    width: 100%;
 }
 
 .img-preview-wrapper{
