--- a/src/public/css/navbar.css
+++ b/src/public/css/navbar.css
@@ -18,6 +18,7 @@ body{
     background-color: var(--SoftGray);
     height: 95px;
     font-family: 'Open Sans', sans-serif;;
+    min-width: 1430px;
 }
 
 .logo-wrapper .text{
