style: add modal create project

--- a/src/public/css/perfil.css
+++ b/src/public/css/perfil.css
@@ -3,7 +3,7 @@ body{
     margin: 0;
     background-color: var(--GrayishWhite);
 }
-.main{
+.mainperfil{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
