--- a/src/public/css/projectfullview.css
+++ b/src/public/css/projectfullview.css
@@ -3,7 +3,7 @@
     --Black: #202020;
     --Gray:  #514f4f;
     --SoftGray: #D9D9D9;
-    --MediumGray: #7a7979;
+    --MediumGray: #767575;
 }
 body{
     margin: 0;
