--- a/src/public/css/home.css
+++ b/src/public/css/home.css
@@ -18,6 +18,13 @@
     justify-content: center; /* Center the grid horizontally (optional) */
     gap: 20px;
     min-width: 1100px;
+    background-color: #D9D9D9;
+    width: 100%;
+    height: 120%;
+    border: 1px rgba(19, 17, 17, 0.29);
+    border-style: solid;
+    border-radius: 0 0 20px 20px;
+    padding: 20px;
 }
 
 .pagination .page-item .page-link.pagination{
@@ -49,6 +56,7 @@
 .empt{
     display: flex;
     justify-content: center;
+    background-color: var(--SoftGrayGray);
 }
 .pagination{
     margin-left: 20px;
@@ -62,11 +70,11 @@
 }
 .box-options{
     display: flex;
-    justify-content: center;
 }
 .options{
     border: 1px rgba(19, 17, 17, 0.29);
     border-style: solid;
+    border-bottom: none;
     width: 120%;
     min-width: 150px;
     text-align: center;
