--- a/src/public/css/perfil.css
+++ b/src/public/css/perfil.css
@@ -346,4 +346,48 @@ a.portBox:hover{
     transition-timing-function: ease;
 }
 
+.contact-container{
+}
+#box-fone{
+    border: none;
+    border-radius: .5rem;
+    box-shadow: 0 0 1em rgb(0 0 0 /.3);
+    width: 300px;
+    height: 200px;
+    min-width: 300px;
+    min-height: 200px;
+}
+#box-email{
+    border: none;
+    border-radius: .5rem;
+    box-shadow: 0 0 1em rgb(0 0 0 /.3);
+    width: 300px;
+    height: 200px;
+    min-width: 300px;
+    min-height: 200px;
+}
+.content-contact{
+    display: flex;
+    margin-top: 40px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.content-contact img{
+    width: 40px;
+    margin-bottom: 20px;
+}
+.text-box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 240px;
+    height: 40px;
+    background-color: var(--SoftGray);
+    border-radius: 20px;
 
+}
+.text{
+    margin-top:10px;
+    align-self: center;
+}
