--- a/src/public/css/projectfullview.css
+++ b/src/public/css/projectfullview.css
@@ -214,6 +214,7 @@ body{
 
 .img-profile{
     width: 78px;
+    height: 78px;
     border-radius: 10%;
     border: 1px solid var(--GrayishWhite);
 }
